# Lotus-Vision

./: README.md  note.md  pyproject.toml  requirements.txt
.github/workflows/: lotus-vision.yml
lotus_vision/: actions.py  agent.py  browser.py  ci.py  cli.py  personas.py  report.py  screenshot.py
